Fixed whitespace on tasks. Also adjust task title to Oxygen font.

--- a/app/public/assets/styles/css/home.css
+++ b/app/public/assets/styles/css/home.css
@@ -1,13 +1,16 @@
+@import url(http://fonts.googleapis.com/css?family=Oxygen:400,700,300);
 /* Nice Tools */
 .cf:before,
 .cf:after {
   content: " ";
   /* 1 */
   display: table;
-  /* 2 */ }
+  /* 2 */
+}
 
 .cf:after {
-  clear: both; }
+  clear: both;
+}
 
 /* Main CSS */
 html {
@@ -15,22 +18,27 @@ html {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover; }
+  background-size: cover;
+}
 
 body {
   margin: 0;
   font: normal 500 100%/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased; }
+  -webkit-font-smoothing: antialiased;
+}
 
 ::selection {
-  background: rgba(178, 238, 74, 0.5); }
+  background: rgba(178, 238, 74, 0.5);
+}
 
 ::-moz-selection {
-  background: rgba(178, 238, 74, 0.5); }
+  background: rgba(178, 238, 74, 0.5);
+}
 
 ul {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 header {
   color: #444444;
@@ -44,29 +52,34 @@ header {
   background: -moz-linear-gradient(-90deg, white 0%, rgba(232, 232, 232, 0.35) 50%);
   background: -webkit-linear-gradient(-90deg, white 0%, rgba(232, 232, 232, 0.35) 50%);
   background: -ms-linear-gradient(-90deg, white 0%, rgba(232, 232, 232, 0.35) 50%);
-  background: linear-gradient(-180deg, white 0%, rgba(232, 232, 232, 0.35) 50%); }
+  background: linear-gradient(-180deg, #ffffff 0%, rgba(232, 232, 232, 0.35) 50%);
+}
 
 header .container {
   margin: 0 auto;
   width: 100%;
-  max-width: 85em; }
+  max-width: 85em;
+}
 
 .branding {
   display: inline-block;
   vertical-align: middle;
   width: 45%;
   margin-left: 3.5%;
-  margin-right: 2.5%; }
+  margin-right: 2.5%;
+}
 
 .branding img {
   display: block;
-  width: 18em; }
+  width: 18em;
+}
 
 .login {
   display: inline-block;
   vertical-align: middle;
   width: 45%;
-  margin-right: 3.5%; }
+  margin-right: 3.5%;
+}
 
 .FacebookLogin {
   -webkit-transition: background-color 0.3s ease;
@@ -82,70 +95,88 @@ header .container {
   background-image: -moz-linear-gradient(-90deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.15) 100%);
   background-image: -webkit-linear-gradient(-90deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.15) 100%);
   background-image: -ms-linear-gradient(-90deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.15) 100%);
-  background-image: linear-gradient(-180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.15) 100%); }
+  background-image: linear-gradient(-180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.15) 100%);
+}
 
 .FacebookLogin:hover {
-  background-color: #6ed149; }
+  background-color: #6ed149;
+}
 
 .FacebookLogin {
   color: #FFF;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 .content {
   color: #444444;
   margin: 0 auto;
-  max-width: 85em; }
+  max-width: 85em;
+}
 
 .content .container {
-  margin: 0 3.5%; }
+  margin: 0 3.5%;
+}
 
 .content h2 {
   width: 14em;
   font-size: 1.75em;
   margin-top: 0;
-  font-weight: 300; }
+  font-weight: 300;
+}
 
 .content .left {
   float: left;
-  width: 55%; }
+  width: 55%;
+}
 
 .content p {
   font-size: 1.2em;
   line-height: 2;
-  text-shadow: -1px 1px 0 white; }
+  text-shadow: -1px 1px 0 white;
+}
 
 .content .right {
-  float: left; }
+  float: left;
+}
 
 @media only screen and (max-width: 35em) {
   header {
     font-size: 0.8em;
     text-align: center;
-    padding: 1.5% 0 3.5%; }
+    padding: 1.5% 0 3.5%;
+  }
 
   .branding, .login {
     float: none;
     display: block;
     width: auto;
     margin-left: auto;
-    margin-right: auto; }
+    margin-right: auto;
+  }
 
   .branding img {
-    margin: 3.5% auto; }
+    margin: 3.5% auto;
+  }
 
   .FacebookLogin {
-    float: none; }
+    float: none;
+  }
 
   .content {
-    font-size: 0.8em; }
+    font-size: 0.8em;
+  }
 
   .content h2 {
-    width: 100%; }
+    width: 100%;
+  }
 
   .content h2:first-letter {
-    text-transform: uppercase; }
+    text-transform: uppercase;
+  }
 
   .content .left {
     float: none;
     margin: 0 auto;
-    width: 92.5%; } }
+    width: 92.5%;
+  }
+}
