--- a/app/public/assets/styles/taskboard.scss
+++ b/app/public/assets/styles/taskboard.scss
@@ -40,7 +40,7 @@
 	-moz-transition: border-color 0.5s ease;
 	transition: border-color 0.5s ease;
 	margin: 1.5% 0;
-	padding: 1.5%;
+	padding: 4% 1.5%;
 	border-radius: 8px;
 	border: 1px solid $lightgrey;
 	background: #f8f8f8;
@@ -125,7 +125,7 @@
 
 .taskitem a, .taskitem a:visited {
 	color: $text-color;
-	text-decoration: underline;
+	text-decoration: none;
 	-webkit-transition: color 0.25s ease;
 	-moz-transition: color 0.25s ease;
 	transition: color 0.25s ease;
@@ -134,19 +134,19 @@
 	.taskitem a:hover {
 		color: $objgreen;
 	}
-	
+
 	.taskitem a:active {
 		color: $darkgreen;
 	}
 
 .taskitem h1 {
 	margin: 0;
-	font-size: 1.5em;
+	font: 600 1.3em 'Oxygen';
 	line-height: 1.25;
 }
 
 .taskitem p {
-	border-top: 1px solid $lightgrey;
+	margin: 2.7% 0 0 0;
 }
 
 
@@ -204,7 +204,7 @@
 
 #bookmarklet .bookmarklet-explain {
 	position: absolute;
-	width: 100%;	
+	width: 100%;
 	color: #FFF;
 	display: none;
 	background-color: $objgreen;
